--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "license": "CC-BY-NC-ND-4.0",
   "dependencies": {
     "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
