--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "mark-cli-proj--js-rock-paper-scissors",
   "version": "1.0.0",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "test": "jest"
   },
   "license": "CC-BY-NC-ND-4.0",
   "dependencies": {
